# hyperdashi-server

./: .dockerignore  .env.example  .envrc  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.debian  README.md  flake.nix  init.sh  migrate.sh  prepare-sqlx.sh  test-build.sh  test_item.json
.sqlx/: query-09dc0f7bd6963bb51d14f0d3cec581284eca50eef0b3d9b8d2c383e362748b42.json  query-0b504c0de219f6f5e63e7a351916afbd065fc20c104729005f898eb0d8b19894.json  query-4fbe9fc95ae8d117e302f1fa99069d77dda33dddea731dac19b396cd47aa812b.json  query-63e0cea5c8a9c7d868ac7150b6e9abe02fd91647187a18f22f6b594ed13b0798.json  query-7c8b2043296032e1088a435aa9dfbbff5d917cb4b1bb5f7fdcce64b8a1cf6215.json  query-7e29f32a3b371b508008a09cf0a65e733b743257570656e3b266b0ee86ca4837.json  query-83a55bbd31848e5c0215eebc08063ec8c38847f664b9c4b98b179256d8aa295c.json  query-d6a1c16fc2f4299335b4e7e4feee8f429fb4627f34e35612bb24d10cbd91a48e.json  query-eff7ea8a3cfeb1f630c21d97ece95d4d878eca4361a82e12abe54b1c7cdaaa76.json  query-f5a6b4be9c6d2cac7fd5fe646580a2e18e7fa3819f9f72f2e4e5216d0ae976a7.json  query-fd30373699edbcb21c8db59f6dd60a1d2134d662b7fd1f1160e647e68abf3e92.json
migrations/: 20240704000001_create_items_table.sql  20250705000001_create_cable_colors_table.sql  20250729000001_update_cable_colors_to_nine.sql  20250729000003_remove_invalid_colors.sql  20250729000006_update_items_for_containers.sql.disabled  20250801000001_change_items_id_to_uuid.sql
migrations_backup/: 20240704000002_create_loans_table.sql  20250729000003_remove_invalid_colors.sql  20250729000004_create_label_counter.sql  (+4 more)
(+48 files in other folders)
