[package]
name = "hyperdashi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "json", "chrono", "rust_decimal", "migrate", "macros"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal for money
rust_decimal = { version = "1.35", features = ["serde-float"] }

# HTTP client (for S3)
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"], default-features = false }

# AWS SDK (for S3)
aws-config = "1.1"
aws-sdk-s3 = "1.14"


# Validation
validator = { version = "0.18", features = ["derive"] }

# Regular expressions
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

# Environment variables
dotenvy = "0.15"

# UUID for unique identifiers
uuid = { version = "1.7", features = ["v4", "serde"] }

# Async trait
async-trait = "0.1"

# Base conversion
radix_fmt = "1.0"

[dev-dependencies]
tokio-test = "0.4"
